--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,17 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
-
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
 !/log/.keep
 !/tmp/.keep
 
+# Ignore Byebug command history file.
 .byebug_history
+
+# Ignore ENV file
+.en
+
+# Ignore node modules
+node_modules
