--- a/client/package.json
+++ b/client/package.json
@@ -48,11 +48,25 @@
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "npm-run-all": "^4.1.1",
+    "sass-loader": "^6.0.6",
+    "webpack": "^3.5.1",
+    "gulp": "^3.5.6",
+    "gulp-clean-css": "^3.7.0",
+    "gulp-inject": "^4.3.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^7.0.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^3.1.0"
+  },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "start-js": "node scripts/start.js",
+    "start": "npm-run-all -p watch-scss start-js",
+    "build": "npm run build-css && node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom",
+    "build-css": "gulp loadSass && gulp sass",
+    "watch-scss": "gulp loadSass && gulp sass && gulp watch"
   },
   "jest": {
     "collectCoverageFrom": [
