--- a/client/package.json
+++ b/client/package.json
@@ -49,7 +49,8 @@
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3",
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.1",
