--- a/client/package.json
+++ b/client/package.json
@@ -28,11 +28,12 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "moment": "^2.18.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
-    "r3-library": "^0.2.4",
+    "r3-library": "^1.1.3",
     "raf": "3.4.0",
     "react": "^16.2.0",
     "react-dev-utils": "^4.2.1",
@@ -43,14 +44,13 @@
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
     "style-loader": "0.19.0",
+    "superagent": "^3.5.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3",
-    "moment": "^2.18.1",
-    "superagent": "^3.5.2"
+    "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.1",
